# hydration-reminder

./: .gitignore  Design.md  main.py  pyproject.toml
src/: blocker.py  cli.py  config.py  daemon.py  state.py  tui.py
tests/: test_config.py  test_state.py
