[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydration-reminder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
]

[project.scripts]
hydration = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
